--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE",
-        "Access-Control-Allow-Headers": "Content-Type"
+       "Access-Control-Allow-Headers": "Content-Type, Authorization"
       }
     }
   ]
